@@ -82,7 +82,6 @@ $BACKEND_CONFIG{AFS}{quota}='/usr/bin/fs listquota $FS';
 $EXTENSION_CONFIG{AFSACLManager} = { allow_afsaclchanges =>1 };
 $EXTENSION_CONFIG{AFSGroupManager} = { disallow_groupchanges=>0 };
 
-$ALLOW_SEARCH = 0;
 $ALLOW_CHANGEPERM = 0;
 
 
