@@ -97,7 +97,7 @@ sub handle {
 }
 sub config {
 	my ($self, $var, $default) = @_;
-	return exists $main::EXTENSION_CONFIG{$$self{EXTENSION}}{$var} ? $main::EXTENSION_CONFIG{$$self{EXTENSION}}{$var} : $default;
+	return $main::EXTENSION_CONFIG{$$self{EXTENSION}}{$var} // $default;
 }
 sub readTemplate {
 	my ($self,$filename) = @_;
