@@ -39,3 +39,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #nav a.afsaclmanager {
 	white-space: normal;
 }
+.afs-admin {
+	color: red;
+}
