@@ -4,22 +4,22 @@ $afsaclscurrentfolder
 <input type="hidden" name="saveafsacl" value="yes"/>
 <table>
 <thead>
-<tr> <th>$tl(afsnormalrights)</th> <th>lookup</th> <th>read</th> <th>write</th> <th>insert</th> <th>delete</th> <th>lock</th> <th>admin</th> </tr>
+<tr> <th>$tl(afsnormalrights)</th> <th class="afs-lookup">lookup</th> <th class="afs-read">read</th> <th class="afs-write">write</th> <th class="afs-insert">insert</th> <th>delete</th> <th class="afs-lock">lock</th> <th class="afs-admin">admin</th> </tr>
 </thead>
 <tbody>
 $afsnormalacllist(afsnormalaclentry)
 </tbody>
-<!--IF("$extconfig(allow_afsaclchanges)" ne 1 && $checkAFSCallerAccess(a))-->
+<!--IF("$extconfig(allow_afsaclchanges)" ne "" && $checkAFSCallerAccess(a))-->
 <tbody>
 <tr>
         <td><input class="afsaclmanager add" type="text" name="up_add" size="15"/></td>
-        <td class="center"><input type="checkbox" value="l" name="up"/></td>
-        <td class="center"><input type="checkbox" value="r" name="up"/></td>
-        <td class="center"><input type="checkbox" value="w" name="up"/></td>
-        <td class="center"><input type="checkbox" value="i" name="up"/></td>
-        <td class="center"><input type="checkbox" value="d" name="up"/></td>
-        <td class="center"><input type="checkbox" value="k" name="up"/></td>
-        <td class="center"><input type="checkbox" value="a" name="up"/></td>
+        <td class="center afs-looup"><input type="checkbox" value="l" name="up"/></td>
+        <td class="center afs-read"><input type="checkbox" value="r" name="up"/></td>
+        <td class="center afs-write"><input type="checkbox" value="w" name="up"/></td>
+        <td class="center afs-insert"><input type="checkbox" value="i" name="up"/></td>
+        <td class="center afs-delete"><input type="checkbox" value="d" name="up"/></td>
+        <td class="center afs-lock"><input type="checkbox" value="k" name="up"/></td>
+        <td class="center afs-admin"><input type="checkbox" value="a" name="up"/></td>
 </tr>
 </tbody>
 <!--ENDIF-->
@@ -29,17 +29,17 @@ $afsnormalacllist(afsnormalaclentry)
 <tbody>
 $afsnegativeacllist(afsnegativeaclentry)
 </tbody>
-<!--IF("$extconfig(allow_afsaclchanges)" ne "1" && $checkAFSCallerAccess(a))-->
+<!--IF("$extconfig(allow_afsaclchanges)" ne "" && $checkAFSCallerAccess(a))-->
 <tbody>
 <tr>
         <td><input class="afsaclmanager add" type="text" name="un_add" size="15"/></td>
-        <td class="center"><input type="checkbox" value="l" name="un"/></td>
-        <td class="center"><input type="checkbox" value="r" name="un"/></td>
-        <td class="center"><input type="checkbox" value="w" name="un"/></td>
-        <td class="center"><input type="checkbox" value="i" name="un"/></td>
-        <td class="center"><input type="checkbox" value="d" name="un"/></td>
-        <td class="center"><input type="checkbox" value="k" name="un"/></td>
-        <td class="center"><input type="checkbox" value="a" name="un"/></td>
+        <td class="center afs-lookup"><input type="checkbox" value="l" name="un"/></td>
+        <td class="center afs-read"><input type="checkbox" value="r" name="un"/></td>
+        <td class="center afs-write"><input type="checkbox" value="w" name="un"/></td>
+        <td class="center afs-insert"><input type="checkbox" value="i" name="un"/></td>
+        <td class="center afs-delete"><input type="checkbox" value="d" name="un"/></td>
+        <td class="center afs-lock"><input type="checkbox" value="k" name="un"/></td>
+        <td class="center afs-admin"><input type="checkbox" value="a" name="un"/></td>
 </tr>
 </tbody>
 <tfoot>
