@@ -1,10 +1,10 @@
 <tr>
 	<td>$entry</td>
-	<td class="center"><input type="checkbox" value="l" name="up[$entry]" $checked(l) $readonly $disabled/></td>
-	<td class="center"><input type="checkbox" value="r" name="up[$entry]" $checked(r) $readonly $disabled/></td>
-	<td class="center"><input type="checkbox" value="w" name="up[$entry]" $checked(w) $readonly $disabled/></td>
-	<td class="center"><input type="checkbox" value="i" name="up[$entry]" $checked(i) $readonly $disabled/></td>
-	<td class="center"><input type="checkbox" value="d" name="up[$entry]" $checked(d) $readonly $disabled/></td>
-	<td class="center"><input type="checkbox" value="k" name="up[$entry]" $checked(k) $readonly $disabled/></td>
-	<td class="center"><input type="checkbox" value="a" name="up[$entry]" $checked(a) $readonly $disabled/></td>
+	<td class="center afs-lookup"><input type="checkbox" value="l" name="up[$entry]" $checked(l) $readonly $disabled/></td>
+	<td class="center afs-read"><input type="checkbox" value="r" name="up[$entry]" $checked(r) $readonly $disabled/></td>
+	<td class="center afs-write"><input type="checkbox" value="w" name="up[$entry]" $checked(w) $readonly $disabled/></td>
+	<td class="center afs-insert"><input type="checkbox" value="i" name="up[$entry]" $checked(i) $readonly $disabled/></td>
+	<td class="center afs-delete"><input type="checkbox" value="d" name="up[$entry]" $checked(d) $readonly $disabled/></td>
+	<td class="center afs-lock"><input type="checkbox" value="k" name="up[$entry]" $checked(k) $readonly $disabled/></td>
+	<td class="center afs-admin"><input type="checkbox" value="a" name="up[$entry]" $checked(a) $readonly $disabled/></td>
 </tr>
