@@ -9,7 +9,7 @@ sendbymail_attachments	"Anhänge:"
 sendbymail_send		"Abschicken"
 sendbymail_zip		"Zippe die Anhänge"
 sendbymail_zipfilename	"ZIP-Dateiname:"
-sendbymail_sizelimit	"Max:"
+sendbymail_sizelimit	"Max"
 sendbymail_remove	"Entferne den Anhang"
 sendbymail_download	"Nur als E-Mail herunterladen"
 sendbymail_msg_sizelimitexceeded "Die E-Mail-Größen-Beschränkung wurde überschritten."
