@@ -11,7 +11,7 @@
 		<div>Andrius Preimantas, Simon Jalandt, Harald Strack, </div>
 		<div> Christian Affolter, Jean-François Brison, Jose Marques,</div>
 		<div> Manuel Selling, Florian Freund, David G. Brader,</div>
-		<div> Varadi Gabor</div>
+		<div> Varadi Gabor, Stephen Joyce</div>
 		<div style="font-style:italic">Testers:</div>
 		<div>Michael Sommerfeld, Frank Sittel, Enno Gröper,</div>
 		<div> Daniel Stoye, Karsten Asshauer, Thomas Gleissner, Malte Dreyer,</div>
